--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
 language: java
-services:
-  - mysql
-sudo: false
-script: mvn clean verify
+jdk: oraclejdk8
+install: true
+script: ./mvnw clean install
+cache:
+  directories:
+  - $HOME/.m2
+  script:
+    - ./mvnw clean install
+    - bash <(curl -s https://codecov.io/bash)
+    deploy:
+      -
+        on:
+          branch: release
+        provider: bintray
+        skip_cleanup: true
+        file: target/bin/bintray.json
+        user: nfrankel
+        key: $BINTRAY_API_KEY
