--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-        xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.cobra</groupId>
-    <artifactId>cobra</artifactId>
-    <version>0.98.4</version>
-    <build>
+
+    <groupId>DeveloperJDBC</groupId>
+    <artifactId>DeveloperJDBC</artifactId>
+    <version>1.0-SNAPSHOT</version>
+<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -28,5 +27,4 @@
             <version>8.0.11</version>
         </dependency>
     </dependencies>
-
 </project>
