--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk: oraclejdk8
 install: true
-script: ./mvnw clean install
+script: ./mvnw clean --file *.pom install
 cache:
   directories:
   - $HOME/.m2
