--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
 language: java
 jdk: oraclejdk8
-install: true
-script: ./mvnw clean  install
-deploy:
-  -
-    on:
-      branch: release
-    provider: bintray
-    skip_cleanup: true
-    file: target/bin/bintray.json
-    user: nfrankel
-    key: $BINTRAY_API_KEY
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
