--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,27 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+
+    <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>3.0.5</version>
+        <configuration>
+            <changeLogFile>src/main/resources/org/liquibase/developers_table.xml</changeLogFile>
+            <driver>com.mysql.cj.jdbc.Driver</driver>
+            <url>jdbc:mysql://localhost:3306/dev</url>
+            <username>root</username>
+            <password>1234</password>
+        </configuration>
+        <executions>
+            <execution>
+                <phase>process-resources</phase>
+                <goals>
+                    <goal>update</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
         </plugins>
     </build>
 
