--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <configuration>
             <changeLogFile>src/main/resources/org/liquibase/developers_table.xml</changeLogFile>
             <driver>com.mysql.cj.jdbc.Driver</driver>
-            <url>jdbc:mysql://localhost:3306/dev</url>
+            <url>jdbc:mysql://localhost:3306/dev?user=root,password=1234,serverTimezone=UTC,autoReconnect=true,useSSL=false</url>
             <username>root</username>
             <password>1234</password>
         </configuration>
