--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ jdk: oraclejdk8
 install:
 - mvn -N io.takari:maven:wrapper
 - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+mvn clean compile
