--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,8 +1,7 @@
 
 changeLogFile: src/main/resources/org/liquibase/developers_table.xml
 driver: com.mysql.cj.jdbc.Driver 
-url: jdbc:mysql://127.0.0.4:3306/developers_table?user=root&password=1234&serverTimezone=UTC&autoReconnect=true&useSSL=false 
+url: jdbc:mysql://127.0.0.4:3306/developers_table?autoReconnect=true&amp;useSSL=false 
 username: root
 password:1234 
 verbose: true 
-dropFirst: false 
