--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,22 @@
                 </configuration>
             </plugin>
 
-
+    <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>3.6.2</version>
+        <configuration>
+              <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                    </configuration>
+        <executions>
+            <execution>
+                <phase>process-resources</phase>
+                <goals>
+                    <goal>update</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
         </plugins>
     </build>
 
