--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
                 </configuration>
             </plugin>
 
-    <plugin>
+ <!--   <plugin>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-maven-plugin</artifactId>
         <version>3.6.2</version>
@@ -33,8 +33,8 @@
                 </goals>
             </execution>
         </executions>
-    </plugin>
-        </plugins>
+    </plugin>-->
+       </plugins>
     </build>
 
     <dependencies>
