--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 
 changeLogFile: src/main/resources/org/liquibase/developers_table.xml
-driver: com.mysql.cj.jdbc.Driver 
-url: jdbc:mysql://127.0.0.4:3306/developers_table?user=root&password=1234&serverTimezone=UTC&autoReconnect=true&useSSL=false
-username: root
-password: 1234
+driver: com.simba.athena.jdbc.Driver
+url: mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com
+username: admin
+password: qwerty123
