--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,11 @@
     </build>
 
     <dependencies>
-        <dependency>
+     <!--   <dependency>
             <groupId>com.syncron.amazonaws</groupId>
             <artifactId>simba-athena-jdbc-driver</artifactId>
             <version>2.0.2</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
