--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -4,6 +4,7 @@ driver: com.amazon.redshift.jdbc42.Driver
 url: jdbc:mysql://mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com:3306/developer
 username: admin
 password: qwerty123
-
+verbose: true 
+dropFirst: false 
 
 
