--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,7 @@
             <artifactId>redshift-jdbc42</artifactId>
             <version>1.2.10.1009</version>
         </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.436</version>
-        </dependency>
+
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-redshift</artifactId>
@@ -61,10 +57,10 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
+     <!--   <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
-        </dependency>
+        </dependency> -->
     </dependencies>
 </project>
