--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 
 changeLogFile: src/main/resources/org/liquibase/developers_table.xml
-driver: com.amazon.redshift.jdbc42.Driver
+driver: com.simba.athena.jdbc.Driver
 url: jdbc:mysql://mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com:3306/developer
 username: admin
 password: qwerty123
