--- a/pom.xml
+++ b/pom.xml
@@ -36,22 +36,13 @@
     </plugin>
        </plugins>
     </build>
-
     <dependencies>
-     <!--   <dependency>
-            <groupId>com.amazon.redshift</groupId>
-            <artifactId>redshift-jdbc42</artifactId>
-            <version>1.2.10.1009</version>
-        </dependency>
-
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-redshift</artifactId>
-            <version>1.11.118</version>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>-->
-      <dependency>
+            <groupId>com.syncron.amazonaws</groupId>
+            <artifactId>simba-athena-jdbc-driver</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+  <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
