--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 
 changeLogFile: src/main/resources/org/liquibase/developers_table.xml
-classpath:./AthenaJDBC42_2.0.5.jar
+classpath:./simba-athena-jdbc-driver-2.0.2.jar
 driver: com.simba.athena.jdbc.Driver
 url: jdbc:mysql://mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com:3306/developer
 username: admin
