--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -2,7 +2,7 @@
 changeLogFile: src/main/resources/org/liquibase/developers_table.xml
 classpath:./AthenaJDBC42_2.0.5.jar
 driver: com.simba.athena.jdbc.Driver
-url: jdbc:mysql://mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com:3306/developer
+url: jdbc:mysql://mysqlaws.c05bmdvhonqe.ap-northeast-1.rds.amazonaws.com:3306
 username: admin
 password: qwerty123
 
