--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,24 @@
                     <target>7</target>
                 </configuration>
             </plugin>
-   <plugin>
-        <groupId>org.liquibase</groupId>
-        <artifactId>liquibase-maven-plugin</artifactId>
-        <version>3.0.5</version>
-        <configuration>
-              <propertyFile>src/main/resources/liquibase.properties</propertyFile>
-                    </configuration>
-        <executions>
-            <execution>
-                               <goals>
-                    <goal>update</goal>
-                </goals>
-            </execution>
-        </executions>
-    </plugin>
+
+                                 <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <version>3.0.5</version>
+                        <configuration>
+                            <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
        </plugins>
     </build>
     <dependencies>
@@ -46,6 +49,19 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.18</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.syncron.amazonaws/simba-athena-jdbc-driver -->
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-athena -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-athena</artifactId>
+            <version>1.11.442</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
         <dependency>
